Writing through all sections

--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -10,35 +10,77 @@
 
 - _**A big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
-- _**I'm also happy to highlight** our affiliate Kate Zimina of Roobinium. She's that rare award-winning designer who has deep experience creating [beautiful interfaces](https://dribbble.com/roobinium) for web3 applications. To get Kate's help on your project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
+- _**I'm also happy to highlight our affiliate,** award-winning designer Kate Zimina of [Roobinium](https://dribbble.com/roobinium). To get Kate's help on your next web3 project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
-<!--
+
+**On paper,** Wall Street has experienced a [tech-led bull market](https://www.axios.com/2025/06/25/stock-market-records-technology) in 2025's first half, which  ends tomorrow. This scenario should ring familiar, as it's been the norm for most of the last decade-plus.
+
+Yet this particular bull run hasn't exactly *felt* that way in practice, has it? Volatility [has spiked](https://money.usnews.com/investing/articles/tips-to-handle-stock-market-volatility), often due to the new White House's highly (ahem)  "improvisational"  style of making economic policy day-to-day. In particular, President Trump has rendered the future of global trade — and thus the dollar's role as [the world's reserve currency](https://www.youtube.com/watch?v=pT2cohNt6a4&pp=ygURcm9nb2ZmIGV6cmEga2xlaW4%3D) — far more uncertain. That has demonstrably carried real consequences at times for [economic expectations](https://news.google.com/read/CBMiqAFBVV95cUxQOUVTZjg0VjY0M2IwSzZuTllpamFJUHpnVElDN0JiWDRYU1A4Vy1OM0hRQjJ1ZXlrNzdCaWNrWFpZeGllaDVKLWZGMlRfNU1FUi1oa0JpQThUT0U1bFlIUDJrRlZkRWo3dEUzSklhaHJfd1lSVjRrOVBIam03Mk9IZmhnclF3Z1BnN2k4Q3lfYU1SdW52VzhKUGE5ejFPNmxWZTJrUFdEMWE?hl=en-US&gl=US&ceid=US%3Aen) and investors' appetite for higher-risk bets on tech.
+
+[Here's my scorecard](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing) of major market indicators in the first half, comprising the year-to-date performance of broad measures of crypto, stocks, and more as of Friday's closing bell on Wall Street. We're still a day short of the first half's finish line, to be sure. But I figure it's better to crunch the numbers a little early than too late. 🙃
+
+One other calendar-related update: I'll be taking next week off for the double "holiday" of U.S. Independence Day on the 4th and my birthday on the 6th. Will return to usual publication for w3w on July 13.
+
+By the way, I share my birthday with the highly incongruous trio of the Dalai Lama, George W. Bush, and 50 Cent. That is perhaps a useful metaphor for the very mixed signals markets have been sending lately:
+
+
+
+
+
+<!-- spreadsheet mention/link/transition -->
+
+
+<!-- housekeeping/bday -->
+
+<!-- String...
+
+In tech, crypto is certainly benefiting from a clearer U.S. regulatory picture. But the Trump family's flagrant crypto-related conflicts of interest reflect poorly on rhe industry as a whole, creating fresh problems,
+
+more hit-and-miss
+
+
+
+**Lead item goes here.** Yadda yadda yadda.
 
 A look at first-half markets. Quotes, factoids, etc. Also note up high that you're going to take next week off....
 
 -->
 
-- TK
 
-- TK
+- **Bitcoin is eating everything else in crypto.**
+
+- **But gold is handily beating it as a safe haven.**
+
+- Risk adjusted stock returns
+
+- Tech leadership has suffered post-tariff. The tech rally is expanding beyond the traditional "Magnificent Seven" stocks, with AI chip and data center trades, AI energy, and AI cloud trades emerging as top performers in the S&P 500 since the market bottomed on April 8. This shift suggests that the current bull market is driven by a broader theme of AI and tech, rather than individual stocks like Nvidia or other popular names. https://finance.yahoo.com/news/the-tech-rally-is-about-a-lot-more-than-magnificent-7-right-now-100031363.html <!-- Draft by Leo/Llama 3.1 8B-->
+
+
+- NVDA. Quote: https://finance.yahoo.com/quotes/NVDA/ | Nvidia's stock has seen a significant turnaround, rising to new highs after a successful ramp of its Blackwell chip line and increased interest in sovereign AI and physical AI. The company is benefiting from demand for its chips from hyperscalers and its own sovereign AI plans, which include establishing AI technology centers in several countries and deploying AI factories at a gigawatt scale. https://finance.yahoo.com/news/nvidias-stark-turnaround-is-being-powered-by-robots-hyperscalers-and-sovereign-ai-200015463.html <!-- Draft by Leo/Llama 3.1 8B-->
+
+
+- Real AI use cases/demand: A recent NBC News Decision Desk Poll suggests that public adoption of AI chat tools, such as ChatGPT and Gemini, is on the rise, with 74% of adults having used one at some point and 44% using them regularly. However, the survey also reveals that many people believe that limiting AI use in schools could better prepare students for the future, highlighting ongoing reservations about the technology's impact. https://www.nbcnews.com/tech/internet/american-attitudes-ai-today-mirror-poll-answers-rise-internet-90s-rcna213586 <!-- Draft by Leo/Llama 3.1 8B-->
+
+- **Regulation updates:** Genius Act, etc... | Lummis says Crypto market bill will be done by Sept. 30: https://www.coindesk.com/policy/2025/06/26/key-us-senator-tells-white-house-crypto-market-structure-bill-will-be-done-by-sept-30 | https://www.theblock.co/post/359874/white-house-lawmakers-target-september-to-move-sweeping-crypto-legislation
+
+- **Stablecoin growth TKTK.** <!-- Look at internal metrics, total AUM, Treasury holdings, volume, etc. -->
+
+<hr>
+
+[![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
+https://dribbble.com/roobinium)
+
+<hr>
+
+<!--
+
+More string...
+
 
 - **Circle's shares continue to soar post-IPO,** recently pushing the stablecoin issuer's valuation [within reach of Coinbase](https://www.coindesk.com/markets/2025/06/23/circle-hits-new-record-with-market-cap-nearing-that-of-coinbase). | Latest Coinbase rally: https://decrypt.co/327197/marching-forward-coinbase-stock-eyes-record-close-regulatory-hope
-
-
- <hr>
-
- [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
- https://dribbble.com/roobinium)
-
- <hr>
-
-### Five Things: June 22-28, 2025
-
-*The week's top headlines about emerging technologies and trends reshaping the web:*
 
 - Federal judge rules that use of copyrighted books by OpenAI and Meta was fair use. https://decrypt.co/327137/meta-openai-copyrighted-books-ai-fair-use
 
@@ -46,80 +88,25 @@ A look at first-half markets. Quotes, factoids, etc. Also note up high that you'
 
 - New Hong Kong crypto rules encouraging tokenization of RWA: https://www.coindesk.com/policy/2025/06/26/hong-kong-sets-out-plan-to-regulate-crypto-encourage-tokenization
 
-- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more | Robotaxi rollout. <!-- Link TK -->
+- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more | Robotaxi rollout.
 
-- Tether taking a more active role in running football club in which it owns a minority stake: https://www.coindesk.com/business/2025/06/26/tether-seeks-more-active-role-at-juventus-after-buying-over-10-of-soccer-club
 
-### Market Snapshot
-
-*A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
-
-<!-- Preliminary stats for now. Need updates after Friday's close. -->
-
-<table>
-
-  <thead>
-    <tr>
-      <th>Indicator</th>
-      <th>Close</th>
-      <th>Weekly %</th>
-      <th>YTD %</th>
-    </tr>
-  </thead>
-
-  <tbody>
-   <tr>
-     <td>Bitcoin</td>
-     <td>$107,467.40</td>
-     <td>+3.8%</td>
-     <td>+14.5%</td>
-   </tr>
-
-   <tr>
-     <td>Nasdaq 100</td>
-     <td>22,447.29</td>
-     <td>+3.8%</td>
-     <td>+6.8%</td>
-   </tr>
-
-   <tr>
-     <td>Gold</td>
-     <td>$3,336.00/oz.</td>
-     <td>-1.4%</td>
-     <td>+26.9%
-</td>
-   </tr>
-
-   <tr>
-     <td>USD Index</td>
-     <td>$97.35</td>
-     <td>-1.4%</td>
-     <td>-10.3%</td>
-   </tr>
-
-   <tr>
-     <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>4.253%</td>
-     <td>-0.12</td>
-     <td>-0.32</td>
-   </tr>
-
-</tbody>
-</table>
-
-### Looking Ahead
-
-- Lummis says Crypto market bill will be done by Sept. 30: https://www.coindesk.com/policy/2025/06/26/key-us-senator-tells-white-house-crypto-market-structure-bill-will-be-done-by-sept-30 | https://www.theblock.co/post/359874/white-house-lawmakers-target-september-to-move-sweeping-crypto-legislation
 
 - **More crypto treasuries:** Pompliano launching a new bitcoin treasury company: https://decrypt.co/326510/pomplianos-bitcoin-treasury-procap-unveils-1-billion-spac-merger | https://www.theblock.co/post/359226/anthony-pompliano-strikes-deal-raising-over-750-million-to-create-bitcoin-treasury-firm | Trump Media confirmed plans to add bitcoin to to its treasury. https://decrypt.co/326520/trump-media-reaffirms-bitcoin-treasury-plan-share-buyback | https://www.coindesk.com/business/2025/06/26/solana-focused-upexi-to-tokenize-shares-added-56k-sol-to-holdings | https://www.theblock.co/post/359875/solana-treasury-firm-upexi-plans-to-tokenize-public-shares-via-superstates-opening-bell | Car customizer is developing a bitcoin treasury strategy: https://decrypt.co/326565/wen-lambo-jaguar-land-rover-customizer-bitcoin-strategy |
 
+- Federal judge rules that use of copyrighted books by OpenAI and Meta was fair use. https://decrypt.co/327137/meta-openai-copyrighted-books-ai-fair-use
+
+- **Kraken is on a roll.** https://decrypt.co/327150/kraken-debuts-krak-crypto-fiat-payments-app-110-countries | https://decrypt.co/327112/kraken-license-europes-new-rules
+
+- New Hong Kong crypto rules encouraging tokenization of RWA: https://www.coindesk.com/policy/2025/06/26/hong-kong-sets-out-plan-to-regulate-crypto-encourage-tokenization
+
+- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more | Robotaxi rollout. <!-- Link TK
+
 - Shin on JPM, Shopify coming to Base. https://dcs-spotify.megaphone.fm/LSHML3195392189.mp3?key=6a44064f60ef00b8b5a205f0c0071621&request_event_id=1f0f38eb-ab62-4079-8e59-583f648cf698&session_id=1f0f38eb-ab62-4079-8e59-583f648cf698&timetoken=1750967217_3DDD11D40AB5C6D83CE6DF45CC3A8820
 
-### Odds & Ends
-
-- **Punctuation fight!** Salon's Andi Zeisler [refuses to surrender](https://www.salon.com/2025/06/11/ai-cant-have-my-em-dash/) her beloved em dash to people trying to police articles and academic papers for signs of AI generation. Many of us verifiably human writers still cherish — and make liberal use of — this mark, thank you very much.
-
 - **Neil deGrasse Tyson says** there is mounting evidence we are living in a black hole. ([StarTalk](https://www.youtube.com/watch?v=vKeCr-MAyH4))
+
+-->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
