--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -14,11 +14,9 @@
 
 <hr>
 
-
-
 **On paper,** Wall Street has experienced a [tech-led bull market](https://www.axios.com/2025/06/25/stock-market-records-technology) in 2025's first half, which  ends tomorrow. This scenario should ring familiar, as it's been the norm for most of the last decade-plus.
 
-Yet this particular bull run hasn't exactly *felt* that way in practice, has it? Volatility [has spiked](https://money.usnews.com/investing/articles/tips-to-handle-stock-market-volatility), often due to the new White House's highly (ahem)  "improvisational"  style of making economic policy day-to-day. In particular, President Trump has rendered the future of global trade — and thus the dollar's role as [the world's reserve currency](https://www.youtube.com/watch?v=pT2cohNt6a4&pp=ygURcm9nb2ZmIGV6cmEga2xlaW4%3D) — far more uncertain. That has demonstrably carried real consequences at times for [economic expectations](https://news.google.com/read/CBMiqAFBVV95cUxQOUVTZjg0VjY0M2IwSzZuTllpamFJUHpnVElDN0JiWDRYU1A4Vy1OM0hRQjJ1ZXlrNzdCaWNrWFpZeGllaDVKLWZGMlRfNU1FUi1oa0JpQThUT0U1bFlIUDJrRlZkRWo3dEUzSklhaHJfd1lSVjRrOVBIam03Mk9IZmhnclF3Z1BnN2k4Q3lfYU1SdW52VzhKUGE5ejFPNmxWZTJrUFdEMWE?hl=en-US&gl=US&ceid=US%3Aen) and investors' appetite for higher-risk bets on tech.
+Yet this particular bull run hasn't exactly *felt* that way in practice, has it? Volatility [has spiked](https://money.usnews.com/investing/articles/tips-to-handle-stock-market-volatility), often due to the new White House's highly (ahem) improvisational style of making economic policy day-to-day. In particular, President Trump has rendered t future of global trade — and thus the dollar's role as [the world's reserve currency](https://www.youtube.com/watch?v=pT2cohNt6a4&pp=ygURcm9nb2ZmIGV6cmEga2xlaW4%3D) — far more uncertain. That has demonstrably carried real consequences at times for [economic expectations](https://news.google.com/read/CBMiqAFBVV95cUxQOUVTZjg0VjY0M2IwSzZuTllpamFJUHpnVElDN0JiWDRYU1A4Vy1OM0hRQjJ1ZXlrNzdCaWNrWFpZeGllaDVKLWZGMlRfNU1FUi1oa0JpQThUT0U1bFlIUDJrRlZkRWo3dEUzSklhaHJfd1lSVjRrOVBIam03Mk9IZmhnclF3Z1BnN2k4Q3lfYU1SdW52VzhKUGE5ejFPNmxWZTJrUFdEMWE?hl=en-US&gl=US&ceid=US%3Aen) and investors' appetite for higher-risk bets on tech.
 
 [Here's my scorecard](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing) of major market indicators in the first half, comprising the year-to-date performance of broad measures of crypto, stocks, and more as of Friday's closing bell on Wall Street. We're still a day short of the first half's finish line, to be sure. But I figure it's better to crunch the numbers a little early than too late. 🙃
 
@@ -26,47 +24,15 @@ One other calendar-related update: I'll be taking next week off for the double "
 
 By the way, I share my birthday with the highly incongruous trio of the Dalai Lama, George W. Bush, and 50 Cent. That is perhaps a useful metaphor for the very mixed signals markets have been sending lately:
 
+- **Since Trump's disastrous rollout of worldwide tariffs in early April,** the rebound in tech stocks has expanded beyond the traditional "Magnificent Seven" of trillion-dollar names in Big Tech. (Amazon, Alphabet, Apple, Meta, Microsoft, Netflix, and Nvidia.)
 
 
 
-
-<!-- spreadsheet mention/link/transition -->
-
-
-<!-- housekeeping/bday -->
-
-<!-- String...
-
-In tech, crypto is certainly benefiting from a clearer U.S. regulatory picture. But the Trump family's flagrant crypto-related conflicts of interest reflect poorly on rhe industry as a whole, creating fresh problems,
-
-more hit-and-miss
-
-
-
-**Lead item goes here.** Yadda yadda yadda.
-
-A look at first-half markets. Quotes, factoids, etc. Also note up high that you're going to take next week off....
-
--->
-
-
-- **Bitcoin is eating everything else in crypto.**
-
-- **But gold is handily beating it as a safe haven.**
-
-- Risk adjusted stock returns
-
-- Tech leadership has suffered post-tariff. The tech rally is expanding beyond the traditional "Magnificent Seven" stocks, with AI chip and data center trades, AI energy, and AI cloud trades emerging as top performers in the S&P 500 since the market bottomed on April 8. This shift suggests that the current bull market is driven by a broader theme of AI and tech, rather than individual stocks like Nvidia or other popular names. https://finance.yahoo.com/news/the-tech-rally-is-about-a-lot-more-than-magnificent-7-right-now-100031363.html <!-- Draft by Leo/Llama 3.1 8B-->
-
+with AI chip and data center trades, AI energy, and AI cloud trades emerging as top performers in the S&P 500 since the market bottomed on April 8. This shift suggests that the current bull market is driven by a broader theme of AI and tech, rather than individual stocks like Nvidia or other popular names. https://finance.yahoo.com/news/the-tech-rally-is-about-a-lot-more-than-magnificent-7-right-now-100031363.html <!-- Draft by Leo/Llama 3.1 8B-->
 
 - NVDA. Quote: https://finance.yahoo.com/quotes/NVDA/ | Nvidia's stock has seen a significant turnaround, rising to new highs after a successful ramp of its Blackwell chip line and increased interest in sovereign AI and physical AI. The company is benefiting from demand for its chips from hyperscalers and its own sovereign AI plans, which include establishing AI technology centers in several countries and deploying AI factories at a gigawatt scale. https://finance.yahoo.com/news/nvidias-stark-turnaround-is-being-powered-by-robots-hyperscalers-and-sovereign-ai-200015463.html <!-- Draft by Leo/Llama 3.1 8B-->
 
-
-- Real AI use cases/demand: A recent NBC News Decision Desk Poll suggests that public adoption of AI chat tools, such as ChatGPT and Gemini, is on the rise, with 74% of adults having used one at some point and 44% using them regularly. However, the survey also reveals that many people believe that limiting AI use in schools could better prepare students for the future, highlighting ongoing reservations about the technology's impact. https://www.nbcnews.com/tech/internet/american-attitudes-ai-today-mirror-poll-answers-rise-internet-90s-rcna213586 <!-- Draft by Leo/Llama 3.1 8B-->
-
-- **Regulation updates:** Genius Act, etc... | Lummis says Crypto market bill will be done by Sept. 30: https://www.coindesk.com/policy/2025/06/26/key-us-senator-tells-white-house-crypto-market-structure-bill-will-be-done-by-sept-30 | https://www.theblock.co/post/359874/white-house-lawmakers-target-september-to-move-sweeping-crypto-legislation
-
-- **Stablecoin growth TKTK.** <!-- Look at internal metrics, total AUM, Treasury holdings, volume, etc. -->
+- **Bitcoin is eating everything else in crypto.** The big kahuna of digital currencies is up 14% in the first half, almost tripling the S&P 500's gain. But unlike previous crypto bull runs, bitcoin's strength hasn't carried over to the broader token market at all. Global crypto market cap is nearly flat for the first half at $3.3 trillion, according to [CoinMarketCap](https://coinmarketcap.com/charts/). As bitcoin has far outperformed everything else, its share of the entire crypto market has soared to [almost 65%](https://coinmarketcap.com/charts/bitcoin-dominance/), the highest level in more than four years.
 
 <hr>
 
@@ -75,38 +41,15 @@ https://dribbble.com/roobinium)
 
 <hr>
 
-<!--
+- **Bitcoin has uniquely benefited from three big factors, in my opinion:** 1) Its popular U.S.-listed funds, which have [effectively opened bitcoin](https://decrypt.co/327337/bitcoin-etfs-13-consecutive-inflow-days) to a broad audience of anyone with a conventional stock account. Yes, we're [starting to see](https://dailycoin.com/xrp-sol-and-ada-etfs-on-the-horizon-ripples-ceo-thinks-so/) exchange-traded funds on other tokens as well. But to date, none has translated quite as well to an ETF as bitcoin. 2) Bitcoin is benefiting from [the de-dollarization trade](https://www.forbes.com/sites/digital-assets/2025/06/26/serious-dollar-collapse-fear-drives-huge-5-trillion-2030-bitcoin-price-prediction-to-rival-nvidia-and-microsoft/), as the rest of the world is getting more antsy about the U.S. in general. 3) Trump personally has reinforced the public's ["number go up"](https://www.coindesk.com/opinion/2025/06/10/dont-let-the-cult-of-price-hold-crypto-back) perception of crypto markets as a venue purely for monetary use cases and speculation on token prices.
 
-More string...
+- **By no means did Trump invent that last dynamic,** to be sure. There's a long pattern of it among the general public that pre-dates even his first term, let alone the current one. But to the extent that "number go up" is clearly Trump's personal framing for crypto, and that he has the world's biggest microphone as U.S. president, and that he's been talking publicly about crypto far more frequently in this term, he's clearly having an effect on the broader public's perception, in my view. In effect, he's drawing mass attention away from non-monetary, web3 type use cases for blockchain tech as a platform for applications, to secure people's personal data, and so on. If you're a fan of such implementations, as I certainly am, this sets up an uphill battle for [mindshare](https://www.investopedia.com/terms/m/mindshare.asp) that we'll have to continue to fight for some time to come.  
 
+- **Nevertheless, gold beat the pants off bitcoin** as an investor safe haven in the first half. The yellow metal is up 25%, nearly doubling bitcoin's gain. That underscores  
 
-- **Circle's shares continue to soar post-IPO,** recently pushing the stablecoin issuer's valuation [within reach of Coinbase](https://www.coindesk.com/markets/2025/06/23/circle-hits-new-record-with-market-cap-nearing-that-of-coinbase). | Latest Coinbase rally: https://decrypt.co/327197/marching-forward-coinbase-stock-eyes-record-close-regulatory-hope
+- Real AI use cases/demand: A recent NBC News Decision Desk Poll suggests that public adoption of AI chat tools, such as ChatGPT and Gemini, is on the rise, with 74% of adults having used one at some point and 44% using them regularly. However, the survey also reveals that many people believe that limiting AI use in schools could better prepare students for the future, highlighting ongoing reservations about the technology's impact. https://www.nbcnews.com/tech/internet/american-attitudes-ai-today-mirror-poll-answers-rise-internet-90s-rcna213586 <!-- Draft by Leo/Llama 3.1 8B-->
 
-- Federal judge rules that use of copyrighted books by OpenAI and Meta was fair use. https://decrypt.co/327137/meta-openai-copyrighted-books-ai-fair-use
-
-- **Kraken is on a roll.** https://decrypt.co/327150/kraken-debuts-krak-crypto-fiat-payments-app-110-countries | https://decrypt.co/327112/kraken-license-europes-new-rules
-
-- New Hong Kong crypto rules encouraging tokenization of RWA: https://www.coindesk.com/policy/2025/06/26/hong-kong-sets-out-plan-to-regulate-crypto-encourage-tokenization
-
-- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more | Robotaxi rollout.
-
-
-
-- **More crypto treasuries:** Pompliano launching a new bitcoin treasury company: https://decrypt.co/326510/pomplianos-bitcoin-treasury-procap-unveils-1-billion-spac-merger | https://www.theblock.co/post/359226/anthony-pompliano-strikes-deal-raising-over-750-million-to-create-bitcoin-treasury-firm | Trump Media confirmed plans to add bitcoin to to its treasury. https://decrypt.co/326520/trump-media-reaffirms-bitcoin-treasury-plan-share-buyback | https://www.coindesk.com/business/2025/06/26/solana-focused-upexi-to-tokenize-shares-added-56k-sol-to-holdings | https://www.theblock.co/post/359875/solana-treasury-firm-upexi-plans-to-tokenize-public-shares-via-superstates-opening-bell | Car customizer is developing a bitcoin treasury strategy: https://decrypt.co/326565/wen-lambo-jaguar-land-rover-customizer-bitcoin-strategy |
-
-- Federal judge rules that use of copyrighted books by OpenAI and Meta was fair use. https://decrypt.co/327137/meta-openai-copyrighted-books-ai-fair-use
-
-- **Kraken is on a roll.** https://decrypt.co/327150/kraken-debuts-krak-crypto-fiat-payments-app-110-countries | https://decrypt.co/327112/kraken-license-europes-new-rules
-
-- New Hong Kong crypto rules encouraging tokenization of RWA: https://www.coindesk.com/policy/2025/06/26/hong-kong-sets-out-plan-to-regulate-crypto-encourage-tokenization
-
-- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more | Robotaxi rollout. <!-- Link TK
-
-- Shin on JPM, Shopify coming to Base. https://dcs-spotify.megaphone.fm/LSHML3195392189.mp3?key=6a44064f60ef00b8b5a205f0c0071621&request_event_id=1f0f38eb-ab62-4079-8e59-583f648cf698&session_id=1f0f38eb-ab62-4079-8e59-583f648cf698&timetoken=1750967217_3DDD11D40AB5C6D83CE6DF45CC3A8820
-
-- **Neil deGrasse Tyson says** there is mounting evidence we are living in a black hole. ([StarTalk](https://www.youtube.com/watch?v=vKeCr-MAyH4))
-
--->
+- Rate cuts? <!-- -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
