writing through news summaries

--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -22,15 +22,9 @@ Yet this particular bull run hasn't exactly *felt* that way in practice, has it?
 
 One other calendar-related update: I'll be taking next week off for the double "holiday" of U.S. Independence Day on the 4th and my birthday on the 6th. Will return to usual publication for w3w on July 13.
 
-By the way, I share my birthday with the highly incongruous trio of the Dalai Lama, George W. Bush, and 50 Cent. That is perhaps a useful metaphor for the very mixed signals markets have been sending lately:
+By the way, I share my birthday with the highly incongruous trio of the Dalai Lama, George W. Bush, and 50 Cent. That is perhaps a useful metaphor for the very [mixed signals](https://www.morningstar.com/news/marketwatch/20250628160/tech-stocks-are-powering-this-record-setting-rally-on-wall-street-but-how-long-can-it-last) markets have been sending lately:
 
-- **Since Trump's disastrous rollout of worldwide tariffs in early April,** the rebound in tech stocks has expanded beyond the traditional "Magnificent Seven" of trillion-dollar names in Big Tech. (Amazon, Alphabet, Apple, Meta, Microsoft, Netflix, and Nvidia.)
-
-
-
-with AI chip and data center trades, AI energy, and AI cloud trades emerging as top performers in the S&P 500 since the market bottomed on April 8. This shift suggests that the current bull market is driven by a broader theme of AI and tech, rather than individual stocks like Nvidia or other popular names. https://finance.yahoo.com/news/the-tech-rally-is-about-a-lot-more-than-magnificent-7-right-now-100031363.html <!-- Draft by Leo/Llama 3.1 8B-->
-
-- NVDA. Quote: https://finance.yahoo.com/quotes/NVDA/ | Nvidia's stock has seen a significant turnaround, rising to new highs after a successful ramp of its Blackwell chip line and increased interest in sovereign AI and physical AI. The company is benefiting from demand for its chips from hyperscalers and its own sovereign AI plans, which include establishing AI technology centers in several countries and deploying AI factories at a gigawatt scale. https://finance.yahoo.com/news/nvidias-stark-turnaround-is-being-powered-by-robots-hyperscalers-and-sovereign-ai-200015463.html <!-- Draft by Leo/Llama 3.1 8B-->
+- **Since Trump's disastrous rollout of worldwide tariffs in early April,** the rebound in tech stocks has expanded beyond the traditional ["Magnificent Seven"](https://www.investopedia.com/magnificent-seven-stocks-8402262) club of trillion-dollar names in Big Tech. Only chipmaker Nvidia, which has been a very direct beneficiary of the AI boom, has ranked among the S&P 500's top 20 performers since April's market low. But investors have otherwise been reaching further afield than the usual tech heavyweights like Apple and Amazon to find pure-play bets on AI and other emerging trends, according to [Yahoo Finance](https://finance.yahoo.com/news/nvidias-stark-turnaround-is-being-powered-by-robots-hyperscalers-and-sovereign-ai-200015463.html). Of course, Big Tech is experimenting frantically with AI. But it's not yet clear which of them will win. Plus, from a financial standpoint, an investor's upside from such companies' AI efforts might be diluted by their extensive businesses in other tech categories.
 
 - **Bitcoin is eating everything else in crypto.** The big kahuna of digital currencies is up 14% in the first half, almost tripling the S&P 500's gain. But unlike previous crypto bull runs, bitcoin's strength hasn't carried over to the broader token market at all. Global crypto market cap is nearly flat for the first half at $3.3 trillion, according to [CoinMarketCap](https://coinmarketcap.com/charts/). As bitcoin has far outperformed everything else, its share of the entire crypto market has soared to [almost 65%](https://coinmarketcap.com/charts/bitcoin-dominance/), the highest level in more than four years.
 
@@ -45,11 +39,9 @@ https://dribbble.com/roobinium)
 
 - **By no means did Trump invent that last dynamic,** to be sure. There's a long pattern of it among the general public that pre-dates even his first term, let alone the current one. But to the extent that "number go up" is clearly Trump's personal framing for crypto, and that he has the world's biggest microphone as U.S. president, and that he's been talking publicly about crypto far more frequently in this term, he's clearly having an effect on the broader public's perception, in my view. In effect, he's drawing mass attention away from non-monetary, web3 type use cases for blockchain tech as a platform for applications, to secure people's personal data, and so on. If you're a fan of such implementations, as I certainly am, this sets up an uphill battle for [mindshare](https://www.investopedia.com/terms/m/mindshare.asp) that we'll have to continue to fight for some time to come.  
 
-- **Nevertheless, gold beat the pants off bitcoin** as an investor safe haven in the first half. The yellow metal is up 25%, nearly doubling bitcoin's gain. That underscores  
+- **Nevertheless, gold beat the pants off bitcoin** as an investor safe haven in the first half. The yellow metal is up 25% year-to-date, nearly double bitcoin's gain. That suggests many [normie](https://www.urbandictionary.com/define.php?term=Normie) investors remain wary of digital currencies, preferring to stick to more old-school assets instead.
 
-- Real AI use cases/demand: A recent NBC News Decision Desk Poll suggests that public adoption of AI chat tools, such as ChatGPT and Gemini, is on the rise, with 74% of adults having used one at some point and 44% using them regularly. However, the survey also reveals that many people believe that limiting AI use in schools could better prepare students for the future, highlighting ongoing reservations about the technology's impact. https://www.nbcnews.com/tech/internet/american-attitudes-ai-today-mirror-poll-answers-rise-internet-90s-rcna213586 <!-- Draft by Leo/Llama 3.1 8B-->
-
-- Rate cuts? <!-- -->
+- **The masses' perception of AI** also seems to be lagging Silicon Valley's unabashed giddiness markedly. In a [recent NBC News](https://www.nbcnews.com/tech/internet/american-attitudes-ai-today-mirror-poll-answers-rise-internet-90s-rcna213586) poll, 74% of resppondents said they have tried popular AI apps at some point. But only 44% use them regularly. In addition, 47% said they believe a school that prohibits using AI would better prepare students for the future.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
