Adding head + subhed, with an assist on the latter from ChatGPT

--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -1,4 +1,4 @@
-# tktk
+# How 2025's tech bull isn't like the others
 ## tktk
 
 ![Charging bull sculpture on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
