Doing copyedits suggested by Copilot

--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -14,13 +14,13 @@
 
 <hr>
 
-**On paper,** Wall Street has experienced a [tech-led bull market](https://www.axios.com/2025/06/25/stock-market-records-technology) in 2025's first half, which  ends tomorrow. This scenario should ring familiar, as it's been the norm for most of the last decade-plus.
+**On paper,** Wall Street has experienced a [tech-led bull market](https://www.axios.com/2025/06/25/stock-market-records-technology) in 2025's first half, which ends tomorrow. This scenario should ring familiar, as it's been the norm for most of the last decade-plus.
 
 Yet this particular bull run hasn't exactly *felt* that way in practice, has it? Volatility [has spiked](https://money.usnews.com/investing/articles/tips-to-handle-stock-market-volatility), often due to the new White House's highly (ahem) improvisational style of making economic policy day-to-day. In particular, President Trump has rendered t future of global trade — and thus the dollar's role as [the world's reserve currency](https://www.youtube.com/watch?v=pT2cohNt6a4&pp=ygURcm9nb2ZmIGV6cmEga2xlaW4%3D) — far more uncertain. That has demonstrably carried real consequences at times for [economic expectations](https://news.google.com/read/CBMiqAFBVV95cUxQOUVTZjg0VjY0M2IwSzZuTllpamFJUHpnVElDN0JiWDRYU1A4Vy1OM0hRQjJ1ZXlrNzdCaWNrWFpZeGllaDVKLWZGMlRfNU1FUi1oa0JpQThUT0U1bFlIUDJrRlZkRWo3dEUzSklhaHJfd1lSVjRrOVBIam03Mk9IZmhnclF3Z1BnN2k4Q3lfYU1SdW52VzhKUGE5ejFPNmxWZTJrUFdEMWE?hl=en-US&gl=US&ceid=US%3Aen) and investors' appetite for higher-risk bets on tech.
 
 [Here's my scorecard](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing) of major market indicators in the first half, comprising the year-to-date performance of broad measures of crypto, stocks, and more as of Friday's closing bell on Wall Street. We're still a day short of the first half's finish line, to be sure. But I figure it's better to crunch the numbers a little early than too late. 🙃
 
-One other calendar-related update: I'll be taking next week off for the double "holiday" of U.S. Independence Day on the 4th and my birthday on the 6th. Will return to usual publication for w3w on July 13.
+One other calendar-related update: I will be taking next week off for the double "holiday" of U.S. Independence Day on the 4th and my birthday on the 6th. Then publication of w3w will resume as usual July 13.
 
 By the way, I share my birthday with the highly incongruous trio of the Dalai Lama, George W. Bush, and 50 Cent. That is perhaps a useful metaphor for the very [mixed signals](https://www.morningstar.com/news/marketwatch/20250628160/tech-stocks-are-powering-this-record-setting-rally-on-wall-street-but-how-long-can-it-last) markets have been sending lately:
 
@@ -41,7 +41,7 @@ https://dribbble.com/roobinium)
 
 - **Nevertheless, gold beat the pants off bitcoin** as an investor safe haven in the first half. The yellow metal is up 25% year-to-date, nearly double bitcoin's gain. That suggests many [normie](https://www.urbandictionary.com/define.php?term=Normie) investors remain wary of digital currencies, preferring to stick to more old-school assets instead.
 
-- **The masses' perception of AI** also seems to be lagging Silicon Valley's unabashed giddiness markedly. In a [recent NBC News](https://www.nbcnews.com/tech/internet/american-attitudes-ai-today-mirror-poll-answers-rise-internet-90s-rcna213586) poll, 74% of resppondents said they have tried popular AI apps at some point. But only 44% use them regularly. In addition, 47% said they believe a school that prohibits using AI would better prepare students for the future.
+- **The masses' perception of AI** also seems to lag Silicon Valley's unabashed giddiness markedly. In a [recent NBC News](https://www.nbcnews.com/tech/internet/american-attitudes-ai-today-mirror-poll-answers-rise-internet-90s-rcna213586) poll, 74% of resppondents said they have tried popular AI apps at some point. But only 44% use them regularly. In addition, 47% said they believe a school that prohibits using AI would better prepare students for the future.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
