--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -1,4 +1,4 @@
-# How 2025's tech bull isn't like the others
+# How 2025's tech bull isn't like earlier rallies
 ## The first half's gains were fueled by AI and bitcoin — with a big helping of chaos on the side.
 
 ![Charging bull sculpture on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
@@ -16,7 +16,7 @@
 
 **On paper,** Wall Street has experienced a [tech-led bull market](https://www.axios.com/2025/06/25/stock-market-records-technology) in 2025's first half, which ends tomorrow. This scenario should ring familiar, as it's been the norm for most of the last decade-plus.
 
-Yet this particular bull run hasn't exactly *felt* that way in practice, has it? Volatility [has spiked](https://money.usnews.com/investing/articles/tips-to-handle-stock-market-volatility), often due to the new White House's highly (ahem) improvisational style of making economic policy day-to-day. In particular, President Trump has rendered t future of global trade — and thus the dollar's role as [the world's reserve currency](https://www.youtube.com/watch?v=pT2cohNt6a4&pp=ygURcm9nb2ZmIGV6cmEga2xlaW4%3D) — far more uncertain. That has demonstrably carried real consequences at times for [economic expectations](https://news.google.com/read/CBMiqAFBVV95cUxQOUVTZjg0VjY0M2IwSzZuTllpamFJUHpnVElDN0JiWDRYU1A4Vy1OM0hRQjJ1ZXlrNzdCaWNrWFpZeGllaDVKLWZGMlRfNU1FUi1oa0JpQThUT0U1bFlIUDJrRlZkRWo3dEUzSklhaHJfd1lSVjRrOVBIam03Mk9IZmhnclF3Z1BnN2k4Q3lfYU1SdW52VzhKUGE5ejFPNmxWZTJrUFdEMWE?hl=en-US&gl=US&ceid=US%3Aen) and investors' appetite for higher-risk bets on tech.
+Yet this particular bull run hasn't exactly *felt* that way in practice, has it? Volatility [has spiked](https://money.usnews.com/investing/articles/tips-to-handle-stock-market-volatility), often due to the new White House's highly (ahem) improvisational style of making economic policy day-to-day. In particular, President Trump has rendered the future of global trade — and thus the dollar's role as [the world's reserve currency](https://www.youtube.com/watch?v=pT2cohNt6a4&pp=ygURcm9nb2ZmIGV6cmEga2xlaW4%3D) — far more uncertain. That has demonstrably carried real consequences at times for [economic expectations](https://news.google.com/read/CBMiqAFBVV95cUxQOUVTZjg0VjY0M2IwSzZuTllpamFJUHpnVElDN0JiWDRYU1A4Vy1OM0hRQjJ1ZXlrNzdCaWNrWFpZeGllaDVKLWZGMlRfNU1FUi1oa0JpQThUT0U1bFlIUDJrRlZkRWo3dEUzSklhaHJfd1lSVjRrOVBIam03Mk9IZmhnclF3Z1BnN2k4Q3lfYU1SdW52VzhKUGE5ejFPNmxWZTJrUFdEMWE?hl=en-US&gl=US&ceid=US%3Aen) and investors' appetite for higher-risk bets on tech.
 
 [Here's my scorecard](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing) of major market indicators in the first half, comprising the year-to-date performance of broad measures of crypto, stocks, and more as of Friday's closing bell on Wall Street. We're still a day short of the first half's finish line, to be sure. But I figure it's better to crunch the numbers a little early than too late. 🙃
 
