Adding links to news summaries

--- a/2025/2025-07-13-wir.md
+++ b/2025/2025-07-13-wir.md
@@ -14,21 +14,17 @@
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda.
+**Call me Ishmael.** Yadda yadda yadda. <!-- Riff on upcoming "crypto week" in Washington. -->
 
-<!--
+- Crypto Week is coming up in Washington: https://decrypt.co/329850/house-democrats-struggle-approach-crypto-week-unified-front | Politico preview: https://www.politico.com/live-updates/2025/07/10/congress/house-senate-crypto-bill-trump-stablecoin-00447633 | Global regulation scorecard isn't as simple as sometimes assumed: https://hackernoon.com/a-peek-at-how-regulation-molds-the-scoreboard-cryptos-global-ledger?source=rss
 
-Some candidates for the lead item:
+- Grayscale is disputing the SEC's decision to block the launch of its multi-token fund. https://www.theblock.co/post/362239/grayscale-presses-sec-to-allow-its-multi-crypto-fund-to-launch-citing-investor-harm | Coinbase disputing Oregon state regulatory action: https://www.theblock.co/post/362301/coinbase-sues-oregon-gov-kotek-for-public-records-over-crypto-policy-shift-amid-charges-brought-against-the-firm
 
-- VALUE: A great post/rant about the "rise of the business idiot" and extractive tech companies in particular: https://www.wheresyoured.at/the-era-of-the-business-idiot/
+- New Trump disclosure on crypto self-dealing: https://www.forbes.com/sites/zacheverson/2025/07/12/trump-world-liberty-financial-crypto-sec-tokens-wlfi-usd1/ | https://www.nytimes.com/2025/07/09/business/truth-social-trump-media-crypto.html
 
-- TK
+- Florida's AG is investigating Robinhood: https://decrypt.co/329664/florida-ag-investigates-robinhood-crypto-pricing
 
-- TK
-
-- TK
-
--->
+Pump.fun raised $500M in 12 minutes: https://www.theblock.co/post/362320/pump-fun-raises-500-million-in-12-minutes-as-pump-tokens-fully-sell-out
 
  <hr>
 
@@ -41,13 +37,15 @@ Some candidates for the lead item:
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Bloomberg Crypto tktk <!-- Catch up on Tuesday's episode -->
+- Markets: New bitcoin record. https://www.cnbc.com/2025/07/11/crypto-market-today.html | Optimism on regulation: https://www.reuters.com/business/bitcoins-record-high-lifts-crypto-stocks-renewed-regulatory-optimism-2025-07-11/ | Dollar weakness: https://www.reuters.com/world/middle-east/dollar-rises-loonie-falls-trump-announces-new-tariffs-2025-07-11/ | ETH ETFs inflows surge, including 300M day for Blackrock https://www.coindesk.com/markets/2025/07/11/ethereum-etfs-see-inflow-surge-as-blackrocks-etha-draws-in-record-300m-in-a-day | https://nypost.com/2025/07/11/business/wall-street-is-using-its-bitcoin-playbook-to-bet-on-ethereum/ | https://finance.yahoo.com/video/bitcoin-hits-record-high-heres-213003110.html | https://decrypt.co/329677/bitcoin-etfs-post-second-biggest-day-ever-why-it-matters | IBIT became the fastest ETF ever to hit an $80B capitalization: https://www.coindesk.com/markets/2025/07/11/spot-bitcoin-etfs-see-usd1b-inflows-as-ibit-becomes-fastest-fund-to-hit-usd80b-in-assets
 
-- Yaccarino resigned from X: https://www.salon.com/2025/07/09/yaccarino-resigns-as-ceo-of-x-day-after-mechahitler-posts/
+- ETH staking is at an all-time high, driven by the Pectra upgrade. https://www.theblock.co/post/361372/pectra-upgrade-spurs-eth-staking-surge-consolidating-validators-and-cutting-costs
 
-- tk
+- Robinhood is offering European users tokenized stocks: https://uk.finance.yahoo.com/news/robinhood-crypto-trading-blockchain-tokenised-stocks-050022670.html
 
-- tk
+- More treasury moves: Solana treasury firm Upexi is raising another $200M: https://decrypt.co/329838/solana-treasury-firm-upexi-raises-200-million-boost-sol-stash | SharpLink bought 10,000 ETH from the Ethereum Foundation for its treasury: https://www.coindesk.com/markets/2025/07/11/ethereum-foundation-sells-10000-eth-to-sharplink-in-first-such-otc-deal
+
+- Yaccarino resigned from X: https://www.salon.com/2025/07/09/yaccarino-resigns-as-ceo-of-x-day-after-mechahitler-posts/ | Decrypt reviewer didn't like Grok 4: https://decrypt.co/329866/grok-4-basic-review-elon-musk-ai-thinks-like-him
 
 ### Market Snapshot
 
@@ -106,9 +104,9 @@ Some candidates for the lead item:
 
 ### Looking Ahead
 
-- Graham Stephens on BTC <!-- Link tk -->
+- Scifi author martha wells says we're a loooong way from AGI: https://www.scientificamerican.com/article/were-light-years-away-from-true-artificial-intelligence-says-murderbot/
 
-- tk
+- Explainers: Graham Stephens on BTC <!-- Link tk  | Why AI gets it wrong so often: https://hackernoon.com/why-ai-gets-it-wrong-more-than-you-think?source=rss
 
 - CME lawsuit: https://www.bloomberg.com/opinion/newsletters/2025-07-08/floor-traders-want-their-seats-back?cmpid=BBD070825_MONEYSTUFF
 
